Fixed text box alignments

--- a/src/components/CustomDropdown.css
+++ b/src/components/CustomDropdown.css
@@ -18,7 +18,7 @@ ion-select::part(text) {
 
 }
 ion-popover {
-  --width: 26.2vw;
+  width: 26vw;
   /* margin-top: 1vh; */
   margin-left: -0.6vw;
 }
